--- a/src/App.css
+++ b/src/App.css
@@ -8,19 +8,19 @@
 
 body {
   font: normal 16px/1.5 "Helvetica Neue", sans-serif;
-  background-image:url("./bk.png");
+  background-image: url("./bk.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
-  color: #8B4513;
+  color: #8b4513;
   overflow-x: hidden;
   padding-bottom: 50px;
-}  /* INTRO SECTION
+} /* INTRO SECTION
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 .intro {
-  background:transparent;
+  background: transparent;
   padding: 100px 0;
 }
 
@@ -34,7 +34,6 @@ body {
 h1 {
   font-size: 2.5rem;
 }
-
 
 /* TIMELINE
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -54,7 +53,7 @@ h1 {
 }
 
 .timeline ul li::after {
-  content: '';
+  content: "";
   position: absolute;
   left: 50%;
   bottom: 0;
@@ -74,7 +73,7 @@ h1 {
 }
 
 .timeline ul li div::before {
-  content: '';
+  content: "";
   position: absolute;
   bottom: 7px;
   width: 0;
@@ -89,7 +88,7 @@ h1 {
 .timeline ul li:nth-child(odd) div::before {
   left: -15px;
   border-width: 8px 16px 8px 0;
-  border-color: transparent #AB7942 transparent transparent;
+  border-color: transparent #daa063 transparent transparent;
 }
 
 .timeline ul li:nth-child(even) div {
@@ -99,7 +98,7 @@ h1 {
 .timeline ul li:nth-child(even) div::before {
   right: -15px;
   border-width: 8px 0 8px 16px;
-  border-color: transparent transparent transparent #AB7942;
+  border-color: transparent transparent transparent #daa063;
 }
 
 time {
@@ -109,22 +108,21 @@ time {
   margin-bottom: 8px;
 }
 
-
 /* EFFECTS
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 .timeline ul li::after {
-  transition: background .5s ease-in-out;
+  transition: background 0.5s ease-in-out;
 }
 
 .timeline ul li.in-view::after {
-  background: #AB7942;
+  background: #daa063;
 }
 
 .timeline ul li div {
   visibility: hidden;
   opacity: 0;
-  transition: all .5s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
 
 .timeline ul li:nth-child(odd) div {
@@ -140,7 +138,6 @@ time {
   visibility: visible;
   opacity: 1;
 }
-
 
 /* GENERAL MEDIA QUERIES
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -168,6 +165,25 @@ time {
   .timeline ul li:nth-child(even) div::before {
     left: -15px;
     border-width: 8px 16px 8px 0;
-    border-color: transparent #F45B69 transparent transparent;
+    border-color: transparent #daa063 transparent transparent;
+  }
+}
+.image {
+  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+    0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
+    0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+    0 100px 80px rgba(0, 0, 0, 0.12);
+  width: 50%;
+}
+h1 {
+  text-align: center;
+}
+@media only screen and (max-width: 800px) {
+  .image {
+    width: 80%;
+  }
+  h1 {
+    font-size: 15px;
+    padding: 1px;
   }
 }
