--- a/src/App.css
+++ b/src/App.css
@@ -177,6 +177,13 @@ time {
 }
 h1 {
   text-align: center;
+  width: 90%;
+  float: right;
+  padding-top: 2rem;
+}
+.LogoIeee {
+  width: 10%;
+  padding-left: 1rem;
 }
 @media only screen and (max-width: 800px) {
   .image {
